2001-05-22  Darin Adler  <darin@eazel.com>

        * libart_lgpl/configure.in:
	Added HTML_DIR part needed for gtk-doc build.

2001-05-22  Darin Adler  <darin@eazel.com>

        * art_affine.c: (art_affine_invert):
        Fix code that would't compile do to parameter name changes for
        documentation purposes.

        * doc/libart-decl.txt:
        * doc/tmpl/.cvsignore:
        Quiet cvs a little bit.

2001-05-20  Mathieu Lacage <mathieu@gnu.org>

	* .cvsignore: chuuut.
	* art_affine.c: (art_affine_invert): fix the documentation comments.
	* doc/Makefile.am: add image files for affine transforms:
	  art-affines.png
	  art-affine-matrix.png
	  art-affine-libart.png
	  dia/art-affine-matrix.dia
	  dia/art-affine-libart.dia
	  dia/art-affines.dia
	* doc/tmpl/art_affine.sgml: document.
	* doc/tmpl/art_gamma.sgml: nothing.
	* doc/tmpl/art_memory.sgml: nothing.

2001-05-17  Mathieu Lacage  <mathieu@gnu.org>

	* Makefile.am: add gtk-doc test.
	* configure.in: add doc subdir.

	adds draft doc for libart.
	* doc/Makefile.am:
	* doc/fdl.sgml:
	* doc/libart-decl.txt:
	* doc/libart-sections.txt:
	* doc/libart.sgml:
	* doc/tmpl/art_affine.sgml:
	* doc/tmpl/art_buffer_affine.sgml:
	* doc/tmpl/art_construction_core.sgml:
	* doc/tmpl/art_construction_extended.sgml:
	* doc/tmpl/art_construction_trans.sgml:
	* doc/tmpl/art_gamma.sgml:
	* doc/tmpl/art_memory.sgml:
	* doc/tmpl/art_pixbuf.sgml:
	* doc/tmpl/art_render.sgml:
	* doc/tmpl/art_svp.sgml:

2000-10-19  Ramiro Estrugo  <ramiro@eazel.com>

	* art_svp_wind.c: (x_order), (x_order_2):
	Protect the colinear x_order_2: colinear spewage with DEBUG_raph
	defines.  These happen a lot in Nautilus where we are using svg
	icons and are very annoying.
	
Tue May 16 15:03:35 2000  Raph Levien  <raph@acm.org>

	* art_rgb_pixbuf_affine.c: Included corresponding .h file.

	* art_rgb_pixbuf_affine.h: Put recursive #includes inside
	LIBART_COMPILATION test.

	* art_gray_svp.c: