@@ -1,3 +1,7 @@
+Fri May 25 12:45:56 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* doc/Makefile.am (DOC_MODULE): Fix to the point of actually building.
+
 2001-05-22  Darin Adler  <darin@eazel.com>
 
         * libart_lgpl/configure.in:
